--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<div class="container valign-wrapper" style="position: absolute; color: white; padding-top: 15%">
 		<div class="row">
 			<div class="col s6 offset-s1 white-text text-darken-2">
-				<img src="https://fatalityrecords.s3.eu-central-1.amazonaws.com/logo/png/text/text_400px.png">
+				<img src="https://fatalityrecords.s3.eu-central-1.amazonaws.com/logo/png/text/text_400px.png" class="responsive-img">
 				<h3>Coming Soon</h3>
 				<p>Connect on SoundCloud to stay up to date</p>
 				<a class="waves-effect waves-light btn red darken-3" href="https://soundcloud.com/fatalityrecordss">SoundCloud</a>
