--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
 <head>
 	<!-- Version 1.5 | Deployed on Jan 15 2020 -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/static/icons/apple-touch-icon.png">
@@ -83,7 +83,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col s6 offset-s1 white-text">
+			<div class="col s12 black-text">
 				<form action="https://formspree.io/xqkpbpjn" method="post" enctype="application/x-www-form-urlencoded" class="col s12">
 					<div class="row">
 						<div class="input-field col s6">
@@ -118,6 +118,13 @@
 							<label for="message">Your message (Max. 500 characters)</label>
 						</div>
 					</div>
+					<div class="row">
+						<div class="col s12">
+							<button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    							<i class="material-icons right">send</i>
+ 							 </button>
+						</div>
+					</div>
 				</form>
 			</div>
 		</div>
@@ -130,7 +137,6 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script src="static/js/app.js"></script>
 	<script>
