--- a/contact/index.html
+++ b/contact/index.html
@@ -120,7 +120,7 @@
 					</div>
 					<div class="row">
 						<div class="col s12">
-							<button class="btn waves-effect waves-light" type="submit" name="action">Submit
+							<button class="btn waves-effect waves-light red darken-2" type="submit" name="action">Submit
     							<i class="material-icons right">send</i>
  							 </button>
 						</div>
