--- a/contact/index.html
+++ b/contact/index.html
@@ -20,7 +20,7 @@
 	<meta name="theme-color" content="#9d0000">
 	<!-- Primary Meta Tags -->
 	<title>Contact | Fatality Records</title>
-	<meta name="title" content="Fatality Records">
+	<meta name="title" content="Contact | Fatality Records">
 	<meta name="description" content="Fatality Records by Rick Verboom and DragunoV - More info coming soon">
 	<meta name="robots" content="index, follow">
 	<meta name="author" content="Fatality Records">
@@ -29,14 +29,14 @@
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://fatalityrecords.netlify.com/">
-	<meta property="og:title" content="Fatality Records">
+	<meta property="og:title" content="Contact | Fatality Records">
 	<meta property="og:description" content="Fatality Records by Rick Verboom and DragunoV - More info coming soon">
 	<meta property="og:image" content="https://fatalityrecords.s3.eu-central-1.amazonaws.com/static/65295_29432.jpg">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://fatalityrecords.netlify.com/">
-	<meta property="twitter:title" content="Fatality Records">
+	<meta property="twitter:title" content="Contact | Fatality Records">
 	<meta property="twitter:description" content="Fatality Records by Rick Verboom and DragunoV - More info coming soon">
 	<meta property="twitter:image" content="https://fatalityrecords.s3.eu-central-1.amazonaws.com/static/65295_29432.jpg">
 	<style>
@@ -114,7 +114,7 @@
 					</div>
 					<div class="row">
 						<div class="input-field col s12">
-							<textarea id="message" class="materialize-textarea" data-length="500" name="message"></textarea>
+							<textarea id="message" class="materialize-textarea" data-length="500" name="message" required></textarea>
 							<label for="message">Your message (Max. 500 characters)</label>
 						</div>
 					</div>
@@ -123,6 +123,7 @@
 							<button class="btn waves-effect waves-light red darken-2" type="submit" name="action">Submit
     							<i class="material-icons right">send</i>
  							 </button>
+							<p><span style="font-size: 9p;">Powered by <a href="//formspree.io">Formspree</a></span></p>
 						</div>
 					</div>
 				</form>
