--- a/contact/index.html
+++ b/contact/index.html
@@ -123,7 +123,7 @@
 							<button class="btn waves-effect waves-light red darken-2" type="submit" name="action">Submit
     							<i class="material-icons right">send</i>
  							 </button>
-							<p><span style="font-size: 9p;">Powered by <a href="//formspree.io">Formspree</a></span></p>
+							<p><span style="font-size: 9p;">Powered by <a href="//formspree.io" class="red-text">Formspree</a></span></p>
 						</div>
 					</div>
 				</form>
