--- a/contact/index.html
+++ b/contact/index.html
@@ -45,6 +45,13 @@
 			font-family: 'Josefin Sans', sans-serif;
 			overflow: hidden;
 		}
+		
+		@media only screen and (max-width: 600px) {
+  			body {
+    			font-family: 'Josefin Sans', sans-serif;
+				overflow: scroll;
+  			}
+		}
 
 		.background {
 			background: #e52d27;
