--- a/contact/index.html
+++ b/contact/index.html
@@ -48,6 +48,7 @@
 		
 		@media only screen and (max-width: 795px) {
   			body {
+				height: 100%;
     			font-family: 'Josefin Sans', sans-serif;
 				overflow: scroll;
   			}
