--- a/index.html
+++ b/index.html
@@ -74,13 +74,16 @@
 </head>
 
 <body class="background">
+	<div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v5.0&appId=1096153267099874"></script>
 	<div class="container valign-wrapper" style="position: absolute; color: white; padding-top: 15%">
 		<div class="row">
 			<div class="col s6 offset-s1 white-text text-darken-2">
 				<img src="https://fatalityrecords.s3.eu-central-1.amazonaws.com/logo/png/text/text_400px.png" class="responsive-img">
 				<h3>Coming Soon</h3>
-				<p>Connect on SoundCloud to stay up to date</p>
-				<a class="waves-effect waves-light btn red darken-3" href="https://soundcloud.com/fatalityrecordss">SoundCloud</a>
+				<p>Connect on Facebook to stay up to date</p>
+				<a class="waves-effect waves-light btn red darken-3" href="https://www.facebook.com/FatalityRecords">Facebook</a>
+				<div class="fb-like" data-href="https://www.facebook.com/FatalityRecords/" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="false"></div>
 			</div>
 		</div>
 	</div>
