--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<h3>Coming Soon</h3>
 				<p>Connect on Facebook to stay up to date</p>
 				<a class="waves-effect waves-light btn red darken-3" href="https://www.facebook.com/FatalityRecords">Facebook</a>
-				<div class="fb-like" data-href="https://www.facebook.com/FatalityRecords/" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="false"></div>
+				<span><div class="fb-like" data-href="https://www.facebook.com/FatalityRecords/" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="false"></div></span>
 			</div>
 		</div>
 	</div>
