--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<p>Connect on Facebook to stay up to date</p>
 				<a class="waves-effect waves-light btn red darken-3" href="https://www.facebook.com/FatalityRecords">Facebook</a>
 				<br>
-				<div class="fb-like" data-href="https://www.facebook.com/FatalityRecords/" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="false"></div>
+				<div class="fb-like" data-href="https://www.facebook.com/FatalityRecords/" data-width="" data-layout="button_count" data-action="like" data-size="large" data-share="false"></div>
 			</div>
 		</div>
 	</div>
